# ChzzkMusicQuiz

./: .gitignore  README.md  build.bat  launcher.py  main.py  nomat.spec  playlist_parser.py  pyproject.toml  songs.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CircularProgress.css  CircularProgress.tsx  YouTubePlayer.tsx
frontend/src/pages/: AnswerPage.css  AnswerPage.tsx  GamePage.css  GamePage.tsx  IntroPage.css  IntroPage.tsx  ResultPage.css  ResultPage.tsx
