[project]
name = "nomat"
version = "0.1.0"
description = "노래 맞추기 웹 게임"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "chzzkpy>=2.1.2",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "requests>=2.31.0",
    "pyinstaller>=6.0.0",
    "yt-dlp>=2025.11.12",
]

[project.scripts]
nomat = "launcher:main"
